# similar_to_document

./: README.md  pyproject.toml
tests/: test_validator.py
validator/: __init__.py  main.py
