[project]
name = "similar_to_document"
version = "0.0.0"
description = "Validates that a value is similar to the document."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2"
]